Be nice and ask before overwriting existing files.

BUG: 107201

svn path=/trunk/KDE/kdesdk/cervisia/; revision=428324