cervisiapart.cpp
@@ -1335,6 +1335,9 @@ void CervisiaPart::slotMakePatch()
     if( fileName.isEmpty() )
         return;
 
+    if( !Cervisia::CheckOverwrite(fileName) )
+        return;
+
     QFile f(fileName);
     if( !f.open(IO_WriteOnly) )
     {
